file(GLOB CORE_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(COPY ${CORE_HEADER} DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core")
install(FILES ${CORE_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core)

file(COPY "Algorithm/" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/Algorithm")
file(GLOB CORE_ALGORITHM_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/*.h")
install(FILES ${CORE_ALGORITHM_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Algorithm)

file(COPY "Vector/" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/Vector")
file(GLOB CORE_VECTOR_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Core/Vector/*.h")
install(FILES ${CORE_VECTOR_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Vector)

file(COPY "Matrix/" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/Matrix")
file(GLOB CORE_MATRIX_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Matrix/*.h")
install(FILES ${CORE_MATRIX_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Matrix)

file(COPY "Rigid/" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/Rigid")
file(GLOB CORE_RIGID_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Rigid/*.h")
install(FILES ${CORE_RIGID_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Rigid)

file(COPY "Array/" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/Array")
file(GLOB CORE_ARRAY_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Array/*.h")
install(FILES ${CORE_ARRAY_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Array)

file(GLOB CORE_UTILITY_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Utility/*.h")
file(COPY ${CORE_UTILITY_HEADER} DESTINATION "${PHYSIKA_INCLUDE_PATH}/Utility")
install(FILES ${CORE_UTILITY_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Utility)

file(COPY "Quaternion/" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/Quaternion")
file(GLOB CORE_QUAT_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Quaternion/*.h")
install(FILES ${CORE_QUAT_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/Quaternion)

configure_file("Platform.h.in" "${CMAKE_CURRENT_BINARY_DIR}/Platform.h")
file(COPY "${CMAKE_CURRENT_BINARY_DIR}/Platform.h" DESTINATION "${PHYSIKA_INCLUDE_PATH}/Core/")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/Platform.h"  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/Core/)