file(GLOB FILE_UTILITY_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/File_Utilities/*.h")
file(COPY ${FILE_UTILITY_HEADER} DESTINATION "${PHYSIKA_INCLUDE_PATH}/IO/File_Utilities")
install(FILES ${FILE_UTILITY_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/IO/File_Utilities)

file(GLOB IMAGE_IO_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Image_IO/*.h")
file(COPY ${IMAGE_IO_HEADER} DESTINATION "${PHYSIKA_INCLUDE_PATH}/IO/Image_IO")
install(FILES ${IMAGE_IO_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/IO/Image_IO)

file(GLOB SMESH_IO_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Smesh_IO/*.h")
file(COPY ${SMESH_IO_HEADER} DESTINATION "${PHYSIKA_INCLUDE_PATH}/IO/Smesh_IO")
install(FILES ${SMESH_IO_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/IO/Smesh_IO)

file(GLOB SURFACE_MESH_IO_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/Surface_Mesh_IO/*.h")
file(COPY ${SURFACE_MESH_IO_HEADER} DESTINATION "${PHYSIKA_INCLUDE_PATH}/IO/Surface_Mesh_IO")
install(FILES ${SURFACE_MESH_IO_HEADER}  DESTINATION ${PHYSIKA_INC_INSTALL_DIR}/IO/Surface_Mesh_IO)
